# GStreamer-example

./: 1  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  VersionInfo.h  VersionResource.rc  cmake_install.cmake  example-dfbvideosink.txt  gst-example.sublime-workspace  gst-vr-plugin-player.txt  startup-h264.sh  startup.sh
src/: CMakeLists.txt  Makefile  basic-tutorial-1.c  basic-tutorial-12.c  basic-tutorial-13.c  basic-tutorial-3.c  basic-tutorial-4.c  basic-tutorial-5.c  basic-tutorial-6.c  basic-tutorial-8.c  basic-tutorial-9.c  cmake_install.cmake  compile.sh  directfbtext.c  example-dfbvideosink.c  example01-simple-initialization.c  example02-goption-interface.c  example03-create_gstelement01.c  example03-create_gstelement02.c  example04-use_element01.c  example05-get_element_info_by_factory.c  example06-link_element.c  example07-create_bin.c  example08-custom_bin.c  example09-use_bus.c  example10-dynamic_pads.c  example11-ghost_pads.c  exercise-tutorial-2.c  exercise-tutorial-3.c  first-application.c  gst-vr-plugin-player.c  rmexe.sh
